syntax = "proto3";

package command;

message ServerPlayerMsgData{
    uint64 playerId=1;
    bytes data=2;
    string clientAddr=3;
}

//开始游戏
message CSStartGame_Online{
   uint32 roomId =1;
}

//玩家进入Online
message ClientInOnline_Online {
    uint64 playerId =1;
    string clientAddr =2;
}

//玩家退出online
message ClientOutOnline_Online{
    uint64 playerId =1;
}